--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,15 @@ body {
 
 }
 
+/* -------- */
+.heroTitle{
+  margin-top: 64px!important;
+  font-weight: 600!important;
+  color: #ff2625;
+  font-size: 200px!important;
+  opacity: 0.15;
+}
+
 .exercise-card {
   width: 400px;
   height: 445px;
@@ -107,6 +116,13 @@ body {
 }
 
 @media screen and (max-width:1200px) {
+
+  /* ----- */
+  .heroTitle{
+    display: none;
+  }
+
+
   .detail-image {
     width: 300px;
     height: 300px;
