--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,9 @@ body {
   scroll-behavior: smooth;
 }
 
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 0px;
-} */
+}
 
 .right-arrow,
 .left-arrow {
@@ -146,9 +146,16 @@ body {
   flex-direction: column;
   gap: 24px;
   width: 387px;
-  height: 381px;
-  text-decoration: none;
+  height: auto;
+  text-decoration: none!important;
+  background-color: #fff;
+  padding-bottom: 25px;
+  box-shadow: 0px 0px 5px rgba(41, 41, 41, 0.447);
 }
+.exercise-video:hover{
+  box-shadow: 0px 0px 5px rgb(41, 41, 41);
+}
+
 
 @media screen and (max-width:1200px) {
   
@@ -184,7 +191,7 @@ body {
 
   .exercise-video {
     width: 320px;
-    height: 300px;
+    height: auto;
   }
 
 }
