--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,5 +1,4 @@
-.link{
-    text-decoration: none!important;
-    color: #3A1212;
+.link {
+  text-decoration: none !important;
+  color: #3a1212;
 }
-
